[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bullet.png" type="Texture" id=1]
[ext_resource path="res://Scene/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/bullet_Col.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Duar"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_Col:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -64, -8 )
polygon = PoolVector2Array( 0, -8, 8, 0, 0, 8, -8, 8, -16, 0, -8, -8 )

[node name="bullet" type="Sprite" parent="."]
position = Vector2( -56, -8 )
texture = ExtResource( 1 )

[node name="Duar" type="Timer" parent="."]

[node name="DuarAnim" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="DuarAnim"]
anims/Duar = SubResource( 1 )

[node name="bullet_Col" type="Sprite" parent="DuarAnim"]
visible = false
position = Vector2( -32, -24 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2

[connection signal="animation_finished" from="DuarAnim/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
